# qwhisper

./: CMakeLists.txt  LICENSE  QWhisper.desktop  README.md  install.sh  uninstall.sh
resources/: qwhisper.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/audio/: audiocapture.cpp  audiocapture.h  audiofilter.cpp  audiofilter.h  audioprocessor.cpp  audioprocessor.h
src/config/: configmanager.cpp  configmanager.h
src/output/: fileoutput.cpp  fileoutput.h  outputmanager.cpp  outputmanager.h  windowtyper.cpp  windowtyper.h
src/ui/: audiomonitor.cpp  audiomonitor.h  configwidget.cpp  configwidget.h  settingsdialog.cpp  settingsdialog.h  transcriptwidget.cpp  transcriptwidget.h
src/whisper/: devicemanager.cpp  devicemanager.h  modeldownloader.cpp  modeldownloader.h  whispermodels.cpp  whispermodels.h  whisperprocessor.cpp  whisperprocessor.h
